refactoring css code

--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -28,7 +28,7 @@
                     <f:for each="{data.members}" as="element">
                         <f:if condition="{data.isAdmin} == false">
                             <tr>
-                                <td colspan="4" class="group-name" style="text-align : center;">
+                                <td colspan="4" class="group-name">
                                     <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:group" /> <strong>{element.groupName}</strong>
                                 </td>
                             </tr>
