improve data displaying, code refactoring

--- a/Resources/Private/Templates/Widget/ListOfWorkspacePreviewLinks.html
+++ b/Resources/Private/Templates/Widget/ListOfWorkspacePreviewLinks.html
@@ -43,7 +43,7 @@
                                     </f:then>
                                     <f:else>
                                     <span class="c-badge c-badge--green">
-                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:visible" />
+                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:actif" />
                                     </span>
                                     </f:else>
 
