--- a/Resources/Private/Partials/NoResult.html
+++ b/Resources/Private/Partials/NoResult.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
 	  data-namespace-typo3-fluid="true">
-		<div class="alert alert-warning no-result-alert" role="alert">
+		<div class="alert no-result-alert"  role="alert">
 			<span>
 				 <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:noResult" />
 			</span>
