--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -1,4 +1,5 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
 <div class="widget-content-title">
@@ -13,25 +14,33 @@
                 <thead>
                 <tr>
                     <th scope="col">
-                        Type
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:contentUID" />
                     </th>
                     <th scope="col">
-                        Content ID
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:type" />
                     </th>
                     <th scope="col">
-                        Page ID
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:pageUID" />
                     </th>
                     <th scope="col">
-                        Last modification
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:modificationDate" />
                     </th>
                 </tr>
                 </thead>
                 <tbody>
                 <f:for each="{data}"  as="item">
                     <tr>
+                        <td>
+                            <be:link.editRecord uid="{item.uid}" table="tt_content" returnUrl="{f:be.uri(route: 'dashboard')}">
+                                {item.uid}
+                            </be:link.editRecord>
+                        </td>
                         <td>{item.cType}</td>
-                        <td>{item.uid}</td>
-                        <td>{item.pid}</td>
+                        <td>
+                            <f:be.link class="u-dashboard-button dashboard-button" route="web_layout" parameters="{id: item.pid}">
+                                {item.pid}
+                            </f:be.link>
+                        </td>
                         <td>{item.tstamp}</td>
                     </tr>
                 </f:for>
