Add columns to recently modified content

--- a/Resources/Private/Templates/Widget/TableOfPagesWidget.html
+++ b/Resources/Private/Templates/Widget/TableOfPagesWidget.html
@@ -36,7 +36,11 @@
                                     {item.uid}
                                 </f:be.link>
                             </td>
-                            <td>{item.title}</td>
+                            <td>
+                                <f:be.link  route="web_layout" parameters="{id: item.uid}">
+                                    {item.title}
+                                </f:be.link>
+                            </td>
                             <td>
                                 <div class="pages-status">
                                     <f:if condition="{item.expired} == 1" >
