--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -16,14 +16,21 @@
                     <th scope="col">
                         <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:contentUID" />
                     </th>
+
+                    <th scope="col">
+                        Header/Extract
+                    </th>
+                    <th scope="col">
+                        Status
+                    </th>
                     <th scope="col">
                         <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:type" />
                     </th>
                     <th scope="col">
-                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:pageUID" />
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:modificationDate" />
                     </th>
                     <th scope="col">
-                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:modificationDate" />
+                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:pageTitle" />
                     </th>
                 </tr>
                 </thead>
@@ -35,13 +42,37 @@
                                 {item.uid}
                             </be:link.editRecord>
                         </td>
-                        <td>{item.cType}</td>
                         <td>
-                            <f:be.link class="u-dashboard-button dashboard-button" route="web_layout" parameters="{id: item.pid}">
-                                {item.pid}
+                            <f:if condition="{item.header} === ''">
+                                <f:then>
+                                    <f:format.stripTags >
+                                        {item.bodytext}
+                                    </f:format.stripTags>
+                                </f:then>
+                                <f:else>
+                                    {item.header}
+                                </f:else>
+                            </f:if>
+                        </td>
+                        <td>
+                            <f:if condition="{item.expired} == 1" >
+                                <span>
+                                    <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg" width="18" title="{item.expiredMessage}"/>
+                                </span>
+                            </f:if>
+                            <f:if condition="{item.available} == 0" >
+                                <span>
+                                    <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg" width="18" title="{item.availableMessage}"/>
+                                </span>
+                            </f:if>
+                        </td>
+                        <td>{item.cType}</td>
+                        <td>{item.tstamp}</td>
+                        <td>
+                            <f:be.link  route="web_layout" parameters="{id: item.pid}">
+                                {item.pageTitle}
                             </f:be.link>
                         </td>
-                        <td>{item.tstamp}</td>
                     </tr>
                 </f:for>
                 </tbody>
