code refactoring for item status

--- a/Resources/Private/Templates/Widget/TableOfPagesWidget.html
+++ b/Resources/Private/Templates/Widget/TableOfPagesWidget.html
@@ -43,14 +43,14 @@
                             </td>
                             <td>
                                 <div class="pages-status">
-                                    <f:if condition="{item.expired} == 1" >
+                                    <f:if condition="{item.status} == expired" >
                                         <span>
-                                            <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg" width="18" title="{item.expiredMessage}"/>
+                                            <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg" width="18" title="{item.statusMessage}"/>
                                         </span>
                                     </f:if>
-                                    <f:if condition="{item.available} == 0" >
+                                    <f:if condition="{item.status} == notAvailable" >
                                         <span>
-                                            <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg" width="18" title="{item.availableMessage}"/>
+                                            <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg" width="18" title="{item.statusMessage}"/>
                                         </span>
                                     </f:if>
                                     <f:if condition="{item.hidden} == 1">
