--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -26,21 +26,23 @@
                     </thead>
                     <tbody>
                     <f:for each="{data.members}" as="element">
-                        <f:if condition="{data.isAdmin} == false">
-                            <tr>
-                                <td colspan="4" class="group-name">
-                                    <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:group" /> <strong>{element.groupName}</strong>
-                                </td>
-                            </tr>
-                        </f:if>
-                        <f:for each="{element.users}" as="item">
-                            <tr>
-                                <td>{item.username}</td>
-                                <td>{item.email}</td>
-                                <td>{item.realName}</td>
-                                <td>{item.lastlogin}</td>
-                            </tr>
-                        </f:for>
+                        <f:if condition="{element.users.0}">
+                            <f:if condition="{data.isAdmin} == false">
+                                <tr>
+                                    <td colspan="4" class="group-name">
+                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:group" /> <strong>{element.groupName}</strong>
+                                    </td>
+                                </tr>
+                            </f:if>
+                                <f:for each="{element.users}" as="item">
+                                    <tr>
+                                        <td>{item.username}</td>
+                                        <td>{item.email}</td>
+                                        <td>{item.realName}</td>
+                                        <td>{item.lastlogin}</td>
+                                    </tr>
+                                </f:for>
+                            </f:if>
                     </f:for>
                     </tbody>
                 </table>
