--- a/Resources/Private/Templates/Widget/WorkspacePreviewsWidget.html
+++ b/Resources/Private/Templates/Widget/WorkspacePreviewsWidget.html
@@ -43,7 +43,7 @@
                                     </f:then>
                                     <f:else>
                                     <span class="c-badge c-badge--green">
-                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:actif" />
+                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:active" />
                                     </span>
                                     </f:else>
 
