--- a/Resources/Private/Templates/Widget/WorkspacePreviewsWidget.html
+++ b/Resources/Private/Templates/Widget/WorkspacePreviewsWidget.html
@@ -35,7 +35,7 @@
                         <tr>
                             <td>{item.wsTitle}</td>
                             <td>
-                                <f:if condition="{item.expired} == 1">
+                                <f:if condition="{item.expired}">
                                     <f:then>
                                     <span class="c-badge c-badge--yellow">
                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:expired" />
