--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -55,12 +55,12 @@
                             </f:if>
                         </td>
                         <td>
-                            <f:if condition="{item.status} == expired" >
+                            <f:if condition="{item.status} == 'expired'" >
                                 <span>
                                     <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg" width="18" title="{item.statusMessage}"/>
                                 </span>
                             </f:if>
-                            <f:if condition="{item.status} == notAvailable" >
+                            <f:if condition="{item.status} == 'notAvailable'" >
                                 <span>
                                     <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg" width="18" title="{item.statusMessage}"/>
                                 </span>
